force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Entity__c/OrgChartPlus__MSO_OrgChart2Entity__c.object-meta.xml
<CustomObject>
    <description>Chart specific customer contact info</description>
    <label>MSO OrgChart Entity</label>
    <nameField>
        <displayFormat>MOE-{000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>