force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Entity__c/fields/OrgChartPlus__Colour__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Colour__c</fullName>
    <label>Colour</label>
    <length>7</length>
    <type>Text</type>
</CustomField>