force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Entity__c/fields/OrgChartPlus__EntityCommon__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__EntityCommon__c</fullName>
    <label>Entity Common</label>
    <referenceTo>OrgChartPlus__MSO_OrgChart2EntityCommon__c</referenceTo>
    <relationshipLabel>MSO OrgChart Entities</relationshipLabel>
    <relationshipName>MSO_OrgChart_Entities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>