force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Entity__c/fields/OrgChartPlus__MoleculePosY__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__MoleculePosY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MoleculePosY</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>